<resources>
    <string name="app_name">sellavto</string>
    <string name="search_car">Поиск авто</string>
    <string name="add_ad">+   Добавить объявление</string>
    <string name="extension_search">Расширенный поиск</string>
    <string name="moto">Мото</string>
    <string name="parts">Запчасти</string>
    <string name="tires">Шины</string>
    <string name="services">Услуги</string>
    <string name="connectAdmin">Связь с админом</string>
    <string name="login">Войти</string>
    <string name="register">Регистрация</string>
    <string name="login_or_email">Email</string>
    <string name="password">Пароль</string>
    <string name="cancel">Отмена</string>
    <string name="Email">Email</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="registration">Регистрация</string>
    <string name="profile">Профиль</string>
    <string name="exit_from_account">Выйти из аккаунта</string>
    <string name="password_not_equals">Пароли не совпадают</string>
    <string name="complete_all_fields">Заполните все поля</string>
    <string name="unknown_error">Unknown error</string>
    <string name="title_ad">Название объявления</string>
    <string name="complete">Готово</string>
    <string name="description">Описание</string>
    <string name="add_will_be_check">Объявление будет доступно когда пройет проверку!</string>
    <string name="enter_data">Укажите все необходимые данные</string>
    <string name="success">Успешно!</string>
    <string name="next">Далее</string>
    <string name="phone">Номер телефона</string>
</resources>