<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.login.LoginActivity"
    android:background="@drawable/background"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/rlContainerLogin"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etLogin"
            android:layout_centerInParent="true"
            android:hint="@string/login_or_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_below="@id/etLogin"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/etPassword"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btnLogin"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnRegistration"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btnLogin"
            android:text="@string/register"
            android:onClick="registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnRecreatePass"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btnRegistration"
            android:text="Восстановить пароль"
            android:onClick="recreatePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/flProgressLogin"
        android:background="#fff"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>

</FrameLayout>